--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,37 +1,3 @@
-<!-- <div
-  class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top"
->
-  <h5 class="my-0 mr-md-auto font-weight-normal">Angular Mean Auth</h5>
-  <nav class="my-2 my-md-0 mr-md-3">
-    <a *ngIf="this.authService.isLoggedIn" class="p-2 text-dark"
-      >User Profile</a
-    >
-    <a
-      *ngIf="!this.authService.isLoggedIn"
-      class="p-2 text-dark"
-      routerLinkActive="active"
-      routerLink="/log-in"
-      >Sign in</a
-    >
-  </nav>
-  <a
-    *ngIf="!this.authService.isLoggedIn"
-    class="btn btn-outline-primary"
-    routerLinkActive="active"
-    routerLinkActive="active"
-    routerLink="/sign-up"
-    >Sign up</a
-  >
-  <button
-    (click)="logout()"
-    *ngIf="this.authService.isLoggedIn"
-    type="button"
-    class="btn btn-danger"
-  >
-    Logout
-  </button>
-</div> -->
-
 <header class="p-3 bg-dark text-white">
   <div class="container">
     <div
@@ -40,12 +6,11 @@
       <ul
         class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"
       >
-        <li><a routerLink="/" class="nav-link px-2 text-white">Home</a></li>
         <li>
-          <a routerLink="/recipe" class="nav-link px-2 text-white">Recipe</a>
+          <a routerLink="/" class="nav-link px-2 text-white">Recipe</a>
         </li>
         <li *ngIf="this.authService.isLoggedIn">
-          <a routerLink="/list" class="nav-link px-2 text-white">List</a>
+          <a routerLink="/list/index" class="nav-link px-2 text-white">List</a>
         </li>
       </ul>
 
