lists length check to null from 0

--- a/src/app/components/recipe/recipedetail/recipedetail.component.html
+++ b/src/app/components/recipe/recipedetail/recipedetail.component.html
@@ -68,7 +68,7 @@
         </div>
 
         <a
-          *ngIf="this.authService.isLoggedIn && lists.length == 0"
+          *ngIf="this.authService.isLoggedIn && lists.length == null"
           href="#"
           routerLink="/list"
           class="text-reset text-decoration-none"
