--- a/src/app/components/list/index/index.component.html
+++ b/src/app/components/list/index/index.component.html
@@ -1,3 +1,12 @@
+<ngx-spinner
+  bdColor="rgba(51,51,51,0.8)"
+  size="medium"
+  color="#fff"
+  type="ball-scale-multiple"
+>
+  <p style="font-size: 20px; color: white">Loading...</p>
+</ngx-spinner>
+
 <div class="container my-5">
   <h1 class="mb-5">My Lists</h1>
 
